list item deletion (with display) functional

--- a/financial.html
+++ b/financial.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="financial.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet" />
     <script src="financial.js" defer></script>
   </head>
   <body data-mode="start">
@@ -25,7 +26,6 @@
     <div id="error-div" aria-live="polite"></div>
     <h3>Recorded Transactions</h3>
     <ul id="transaction-list">
-
     </ul>
   </body>
 
