--- a/financial.html
+++ b/financial.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" href="financial.css">
@@ -10,23 +11,38 @@
       <label for="no-file"></label><input type="radio" name="file-check" id="no-file">
       <label for="file-input">Upload records file: </label><input type="file" name="" id="file-input">
     </form> -->
-
     <!-- with action="/appendTransaction", can be submitted to appendTransaction, a python file, for processing -->
-      <form name="New Transaction" id="new-transaction-form" > 
+    <form name="New Transaction" id="new-form" aria-describedby="new-title"> 
+      <h3 id="new-title">New Transaction</h3>
       <label for="new-name">Payee/Item Name: </label><input type="text" name="name" id="new-name">
-      <label for="new-amount">Amount: </label><input type="number" value="0.00" placeholder="0.00" step="0.01" name="amount" id="new-amount">
+      <label for="new-amount">Amount: </label><input type="number" name="amount" id="new-amount" value="0.00" placeholder="0.00" step="0.01">
       <label for="new-date">Date: </label><input type="date" name="date" id="new-date">
       <label for="new-time">Time: </label><input type="time" name="time" id="new-time">
       <!-- <select>
         <option>-s added here programatically
         <option id="new-category">New Category</option>
       </select> -->
-      <input type="submit" value="Save Transaction" id="new-transaction-submit">
+      <input type="submit" name="submit" id="new-submit" value="Save Transaction">
+    </form>
+    <form name="Edit Transaction" id="edit-form" aria-describedby="edit-title">
+      <h3 id="edit-form-title">Edit Transaction</h3>
+      <label for="new-name">Payee/Item Name: </label><input type="text" name="name" id="edit-name">
+      <label for="new-amount">Amount: </label><input type="number" name="amount" id="edit-amount" value="0.00" placeholder="0.00" step="0.01">
+      <label for="new-date">Date: </label><input type="date" name="date" id="edit-date">
+      <label for="new-time">Time: </label><input type="time" name="time" id="edit-time">
+      <!-- <select>
+        <option>-s added here programatically
+        <option id="new-category">New Category</option>
+      </select> -->
+      <button name="cancel" id="edit-cancel">Cancel Edit</button>
+      <input type="submit" name="save" id="edit-save" value="Save Transaction">
     </form>
     <div id="error-div" aria-live="polite"></div>
     <h3>Recorded Transactions</h3>
     <ul id="transaction-list">
     </ul>
+    <h3>Balance</h3>
+    <p id="balance-div">$0.00</p>
   </body>
 
 </html>
