Transaction IDs integrated. Transactions are now edited by the ID number. As it stands, there is slight chance for repeats. Button keypresses also fixed.

--- a/financial.html
+++ b/financial.html
@@ -41,6 +41,8 @@
     <h3>Recorded Transactions</h3>
     <ul id="transaction-list">
     </ul>
+    <button id="export-btn">Export</button>
+    <button id="import-btn">Import</button>
     <h3>Balance</h3>
     <p id="balance-div">$0.00</p>
   </body>
