bugfix - added data validation on saving edits

--- a/financial.html
+++ b/financial.html
@@ -35,7 +35,7 @@
         <option id="new-category">New Category</option>
       </select> -->
       <button name="cancel" id="edit-cancel">Cancel Edit</button>
-      <input type="submit" name="save" id="edit-save" value="Save Transaction">
+      <input type="submit" name="save" id="edit-save" value="Save Edits">
     </form>
     <div id="error-div" aria-live="polite"></div>
     <h3>Recorded Transactions</h3>
